--- a/foodshop/index.html
+++ b/foodshop/index.html
@@ -74,11 +74,15 @@
 
         header a.logo {
             position: absolute;
-            left: 50%;
+            left: 39%;
             top: 20px;
             margin-left: -173px;
         }
-
+        header a.logo > span {
+            font: bolder 50px '궁서체';
+            color: orange;
+            margin-bottom: 30px;
+        }
         header a.oneday_txt {
             position: absolute;
             right: 0px;
@@ -426,6 +430,7 @@
                         <span>주문조회 바로가기</span>
                     </a>
                     <a href="#" class="logo">
+                        <span>전규찬의</span>
                         <img src="./images/header_txt_logo.png" alt="식자재전문쇼핑몰">
                     </a>
                     <a href="#" class="oneday_txt">
